# animaldet

./: .gitignore  DATA.md  DETR.ipynb  OUTPUTS.md  README.md  SOURCES.md  data.dvc  detr.ipynb  docker-compose.yaml  outputs.dvc  pyproject.toml  simple_coco_patcher.py  super-patcher.ipynb
.dvc/: config
animaldet/: config.py
animaldet/engine/: __init__.py  hooks.py  hooks_builder.py  inference.py  loggers.py  metric_hooks.py  optimizers.py  registry.py
animaldet/evaluation/: calculate_f1.py  f1_evaluator.py
animaldet/experiments/: README.md
animaldet/utils/: __init__.py  device.py  registry.py
animaldet/visualization/: __init__.py  fiftyone_loader.py
asg_herdnet/: generate_hnps.py  predict_evaluate_full_image.py  train_stage1.py  train_stage2.py
binary/: README.md  dataset.py  eval.py  inference.py  model.py  train.py
configs/experiment/: herdnet.yaml
configs/experiments/: herdnet.yaml  rfdetr.yaml  rfdetr_all.yaml  rfdetr_herdnet_560_all.yaml  rfdetr_herdnet_560_all_finetuned.yaml  rfdetr_herdnet_over_ungulate.yaml  rfdetr_herdnet_small.yaml  rfdetr_hnp.yaml  rfdetr_ungulate.yaml
configs/inference/: herdnet.yaml  herdnet_test.yaml  rfdetr_89_phase_1.yaml  rfdetr_base.yaml  rfdetr_large_hnm.yaml  rfdetr_large_phase_1.yaml  rfdetr_large_test.yaml  rfdetr_phase_2.yaml  rfdetr_small.yaml  rfdetr_test.yaml  rfdetr_train.yaml  rfdetr_with_background_test.yaml
configs/integrations/: tensorboard.yaml  wandb.yaml
configs/metrics/: f1_herdnet.yaml  f1_rfdetr.yaml  f1_rfdetr_train.yaml
configs/patcher/: default.yaml  herdnet.yaml  herdnet_from_big_size_test.yaml  herdnet_from_big_size_train.yaml  herdnet_from_big_size_val.yaml  ungulate_test.yaml  ungulate_train.yaml  ungulate_val.yaml
configs/visualization/: herdnet_test.yaml  herdnet_test_big_size.yaml  herdnet_train.yaml  (+2 more)
infra/: .gitignore
scripts/: analyze_hnp_predictions.py  calculate_f1_asg.py  calculate_f1_scores.py  convert_to_coco.py  convert_ungulate_to_coco.py  create_coco_with_background.py  create_hard_negative_patches.py  extract_hard_negatives.py  merge_annotations.py  run_inference.py  sample_patches.py  view_full_fiftyone.py  view_patches_fiftyone.py
tools/: __init__.py  confidence_vs_f1.py  inference_cmd.py  main.py  train.py  train_cmd.py
ui/: .gitignore
(+91 files in other folders)
