[project]
name = "animaldet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "hydra-core>=1.3.2",
    "notebook>=7.4.7",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "rfdetr",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "albumentations>=2.0.8",
    "animaloc",
    "dvc>=3.63.0",
    "dvc-s3>=3.2.2",
    "fiftyone>=1.0.0",
    "gdown>=5.2.0",
    "matplotlib>=3.10.6",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "wandb>=0.22.2",
]

[project.scripts]
visualize-dataset = "tools.data.visualization:main"

[tool.uv.sources]
animaloc = { git = "https://github.com/Alexandre-Delplanque/HerdNet/" }
rfdetr = { git = "https://github.com/roboflow/rf-detr" }
